@@ -1,5 +1,12 @@
 2007-11-25  Akim Demaille  <akim@lrde.epita.fr>
 
+	Several *-local in a rule do not work.
+	* tests/all.test: Check this case.
+	Use set -e.
+	* tests/Makefile.am (XFAIL_TESTS): Add it.
+
+2007-11-25  Akim Demaille  <akim@lrde.epita.fr>
+
 	Fix uses of am__strip_dir.
 	* lib/am/libs.am, lib/am/ltlib.am: Catch up with the change of
 	definition of am__strip_dir.
